fixed the homepage on mobile

--- a/src/styles/Home.module.css
+++ b/src/styles/Home.module.css
@@ -22,10 +22,7 @@
     color: #fff;
     text-align: center;
     font-family: "Montserrat", sans-serif;
-}
-
-.home h1 {
-    font-size: 5rem;
+    font-size: clamp(12px, 15vw, 5rem);
 }
 
 .introdark {
